--- a/index.html
+++ b/index.html
@@ -4,21 +4,37 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <meta
       name="description"
       content="Shantanu Solutions - Professional web development services for small businesses, startups, and professionals. Fast delivery, affordable pricing, SEO-optimized websites."
     />
     <meta
       name="keywords"
-      content="web development, website design, static websites, dynamic websites, small business websites, startup websites"
+      content="web development, website design, static websites, dynamic websites, small business websites, startup websites, India web development, affordable websites"
     />
+    <meta name="author" content="Shantanu Solutions" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="msapplication-TileColor" content="#0f172a" />
+
+    <!-- Performance Optimizations -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+
+    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Shantanu Solutions - Professional Web Development Services</title>
+
+    <title>
+      Shantanu Solutions - Professional Web Development Services
+    </title>
   </head>
   <body>
     <div id="root"></div>
