--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="shortcut icon" href="/services/logo.png" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link
