--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
-    <link rel="icon" href="/services/logo.png" type="favicon">
+    <link rel="icon" href="favicon.png" type="favicon">
 
     <!-- Google Fonts -->
     <link
